--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
@@ -143,7 +143,7 @@
               <h3 class="h4 card-title card-title-truncate">
                 <a [routerLink]="'/post/'+post.slug">{{post.titleText}}</a>
               </h3>
-              <p class="card-text card-text-truncate">{{post.excerptText}}</p>
+              <p class="card-text card-text-truncate">{{getRawTextFromHtml(post.excerptText)}}</p>
             </div>
             <div class="card-footer pt-3">
               <div class="d-flex align-items-center text-decoration-none pb-2">
@@ -201,7 +201,7 @@
                 <h3 class="h4 card-title">
                   <a [routerLink]="'/post/'+post.slug">{{post.titleText}}</a>
                 </h3>
-                <p class="card-text card-text-truncate">{{post.excerptText}}</p>
+                <p class="card-text card-text-truncate">{{getRawTextFromHtml(post.excerptText)}}</p>
               </div>
               <div class="card-footer pt-3">
                 <div class="d-flex align-items-center text-decoration-none pb-2">
