--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -192,9 +192,9 @@
                 <!-- Bannière d'abonnement en bas de l'article visible -->
                 <div class="bg-blue-400 d-flex justify-content-center align-items-center flex-column text-center p-4"
                   style="position: relative; " *ngIf="post.isPremium && !post.isHidePremium">
-                  <h2 class="fw-bold">Vous souhaitez lire la suite ?</h2>
-                  <p>Lisez cet article pour seulement 1 € ou abonnez-vous pour profiter de cet article en
-                    intégralité et de bien d'autres !</p>
+                  <h2 class="fw-bold">Vous avez envie de lire la suite ?</h2>
+                  <p>Débloquez immédiatement cet article pour 1 €, ou abonnez-vous pour accéder à l'ensemble de nos
+                    contenus.</p>
                   <div class="row gap-2 justify-content-center">
                     <a class="col-auto btn btn-secondary mt-3" style="cursor: pointer;"
                       [href]='frontendMyJssUrl+"/quotation/subscription/" + ONE_POST_SUBSCRIPTION + "/" + false + "/" + post.id'
