fix small bugs with referential

--- a/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
+++ b/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
@@ -7,14 +7,13 @@
     <div class="d-flex flex-column flex-md-row flex-sm-wrap align-items-start">
       <h6 class="w-100 mb-3 align-items-center">
         <i class="ai-wallet pe-2"></i>Quel type de demande souhaitez-vous ?
-        <osi-tooltip class="ms-2"></osi-tooltip>
+        <osi-tooltip tootltipCodeToDisplay="TO-1" class="ms-2"></osi-tooltip>
       </h6>
       <div *ngFor="let quotationType of quotationTypes"
         class="btn btn-outline-secondary m-1 w-100 w-sm-auto  btn-wrap btn-service-family"
         [class.active]="selectedQuotationType && selectedQuotationType.id == quotationType.id"
         (click)="changeQuotationType(quotationType)">
         {{quotationType.label}}</div>
-      <!-- <osi-tooltip class="ms-2"></osi-tooltip> -->
     </div>
   </section>
 
