last version of tooltips

--- a/client-myjss/src/app/modules/my-account/components/pay-order/pay-order.component.html
+++ b/client-myjss/src/app/modules/my-account/components/pay-order/pay-order.component.html
@@ -33,13 +33,18 @@
             <div class="picture d-flex justify-content-center" *ngIf="qrCodeRecourse">
               <img id="img" [src]="qrCodeRecourse">
             </div>
-            <div class="text-center pt-1 pt-sm-2">
-              <div class="btn-group   " role="group" aria-label="Outline button group">
+            <div class="text-center justify-content-center align-items-center row pt-1 pt-sm-2">
+              <div class="col-auto px-4 mx-2"></div>
+              <div class="btn-group col-auto" role="group" aria-label="Outline button group">
                 <button type="button" class="btn btn-primary" (click)="payedCb()" *ngIf="qrCodeImage">Payer en
                   ligne</button>
                 <button type="button" class="btn btn-outline-secondary"
                   [routerLink]=' "/account/orders/details/" + this.idOrder'>Fermer</button>
               </div>
+              <div class="col-auto text-start ">
+                <osi-tooltip class="" tootltipCodeToDisplay="MYJSS_ACCOUNT_PAY_ORDER"></osi-tooltip>
+              </div>
+
             </div>
           </div>
         </ng-template>
