--- a/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
+++ b/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
@@ -192,12 +192,13 @@
 
     <!-- Preview section - 1/3 of width -->
     <div class="col-md-5 border-left px-4">
-      <div class="sticky-top row" style="top: 4rem;">
+      <div class="sticky-top row align-items-center" style="top: 4rem;">
         <div class="col">
-          <h2 class="text-center">Annonce légale</h2>
+          <h2 class="text-center mb-0">Annonce légale</h2>
         </div>
+        <osi-tooltip class="col-auto" tootltipCodeToDisplay="MYJSS_QUOTATION_REQUIRED_INFO_VIEW_AL"></osi-tooltip>
         <div class="col-auto">
-          <button type="button" class="btn btn-icon btn-secondary rounded-pill" (click)="showPreviewModal()">
+          <button type="button" class="btn btn-icon btn-outline-secondary rounded-pill" (click)="showPreviewModal()">
             <i class="ai-search"></i>
           </button>
         </div>
