--- a/client-myjss/src/app/modules/miscellaneous/components/osi-tooltip/osi-tooltip.component.css
+++ b/client-myjss/src/app/modules/miscellaneous/components/osi-tooltip/osi-tooltip.component.css
@@ -1,3 +1,8 @@
+:host {
+  position: relative;
+  z-index: 1000;
+}
+
 .btn-logo {
   border: none;
   border-radius: 50%;
@@ -27,7 +32,7 @@ button:after {
   width: 100%;
   height: 220px;
   position: absolute;
-  z-index: 1;
+  z-index: 4;
   animation: slide 1.3s ease-out forwards;
 
   /* 
