--- a/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
+++ b/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
@@ -7,7 +7,6 @@
     <div class="d-flex flex-column flex-md-row flex-sm-wrap align-items-start">
       <h6 class="w-100 mb-3 align-items-center">
         <i class="ai-wallet pe-2"></i>Quel type de demande souhaitez-vous ?
-        <osi-tooltip tootltipCodeToDisplay="TO-1" class="ms-2"></osi-tooltip>
       </h6>
       <div *ngFor="let quotationType of quotationTypes"
         class="btn btn-outline-secondary m-1 w-100 w-sm-auto  btn-wrap btn-service-family"
@@ -75,11 +74,13 @@
         </div>
       </div>
       <div *ngIf="indexAsso==currentOpenedPanel">
-        <div class="my-3" *ngIf="!quotation || !quotation.id">
-          <generic-toggle [(model)]="isRegisteredAffaire[indexAsso]"
+        <div class="my-3 row align-items-center" *ngIf="!quotation || !quotation.id">
+          <generic-toggle [(model)]="isRegisteredAffaire[indexAsso]" class="col-auto"
             label="L'entreprise ou l'établissement concerné existe ?" [form]="idenficationForm"
             [propertyName]="'isRegisteredAffaire'+indexAsso">
           </generic-toggle>
+          <osi-tooltip tootltipCodeToDisplay="MYJSS_QUOTATION_IDENTIFICATION_EXISTING_AFFAIRE"
+            class="col-auto "></osi-tooltip>
         </div>
         <!-- Choose affaire by SIRET -->
         <div *ngIf="isRegisteredAffaire[indexAsso] ">
@@ -231,14 +232,17 @@
       </div>
     </div>
   </div>
-  <div class="row justify-content-end m-0" *ngIf="quotation.serviceFamilyGroup">
-    <a class="col-md-auto p-md-4" (click)="addAffaire()"><strong>Ajouter une affaire</strong></a>
+  <div class="row justify-content-end align-items-center m-0" *ngIf="quotation.serviceFamilyGroup">
+    <osi-tooltip tootltipCodeToDisplay="MYJSS_QUOTATION_IDENTIFICATION_ADD_AFFAIRE" class="col-auto "></osi-tooltip>
+    <a class="col-auto p-md-4 ps-md-0" (click)="addAffaire()"><strong>Ajouter une affaire</strong></a>
   </div>
   <div
     class="position-fixed bottom-0 start-0 w-100 bg-light shadow-sm p-3 m-0 d-flex justify-content-end align-items-center z-1030">
-    <osi-tooltip class="me-2"></osi-tooltip>
-    <button type="button" class="btn btn-secondary rounded-1  mx-0 mx-sm-5 d-flex align-items-center"
-      *ngIf="canStartQuotation()" (click)="startQuotation()"> <span class="me-2">Démarrer</span>
+    <osi-tooltip *ngIf="canStartQuotation()" tootltipCodeToDisplay="MYJSS_QUOTATION_IDENTIFICATION_START"
+      class="col-auto "></osi-tooltip>
+    <button type="button" class="btn btn-secondary rounded-1  mx-0 mx-sm-5 ms-sm-2 d-flex align-items-center"
+      *ngIf="canStartQuotation()" (click)="startQuotation()">
+      <span class="me-2">Démarrer</span>
       <i class="ai-arrow-right d-none d-sm-inline"></i>
     </button>
   </div>
