--- a/client-myjss/src/app/modules/quotation/components/services-selection/services-selection.component.html
+++ b/client-myjss/src/app/modules/quotation/components/services-selection/services-selection.component.html
@@ -19,7 +19,7 @@
       <div *ngFor="let asso of quotation.assoAffaireOrders; let indexAsso = index;"
         class="col-12 col-sm-6 col-lg-4 my-2" [ngClass]="{'col-sm-6 col-lg-4' : quotation.assoAffaireOrders.length>1}">
         <div class="white-card card rounded-1 d-flex flex-column h-100 p-4 "
-          [ngClass]="{'selected': selectedAssoIndex == indexAsso}"
+          [ngClass]="{'selected': selectedAssoIndex == indexAsso, 'border-tertiary border-2': selectedAssoIndex != indexAsso}"
           (click)="selectCard(indexAsso);$event.stopPropagation()">
           <div class="row d-flex flex-row align-items-center">
             <i class="ai-briefcase col-1 selected-hover" [ngClass]="{'selected': selectedAssoIndex == indexAsso}"></i>
