changed tabs in step 2 and 3 of quotation

--- a/client-myjss/src/app/modules/quotation/components/services-selection/services-selection.component.css
+++ b/client-myjss/src/app/modules/quotation/components/services-selection/services-selection.component.css
@@ -21,3 +21,25 @@
 .btn.btn-secondary {
   color: var(--ar-primary) !important;
 }
+
+.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
+  border-color: var(--ar-secondary);
+  border-width: 3px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  color: var(--ar-primary);
+  background-color: var(--ar-secondary-bg);
+  transition: transform 0.1s ease-in-out;
+  transform: scale(1.03);
+}
+
+.nav-tabs .nav-link, .nav-tabs .nav-item.show .nav-link {
+  border-color: var(--ar-tertiary);
+  border-bottom: transparent;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  color: var(--ar-secondary);
+  background-color: var(--ar-primary);
+  border-bottom-width: 3px;
+  transition: transform 0.1s ease-in-out;
+}
