--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.css
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.css
@@ -35,3 +35,25 @@
   color: var(--ar-gray-100);
   border: 1px solid #ccc;
 }
+
+.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
+  border-color: var(--ar-secondary);
+  border-width: 3px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  color: var(--ar-primary);
+  background-color: var(--ar-secondary-bg);
+  transition: transform 0.1s ease-in-out;
+  transform: scale(1.03);
+}
+
+.nav-tabs .nav-link, .nav-tabs .nav-item.show .nav-link {
+  border-color: var(--ar-tertiary);
+  border-bottom: transparent;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  color: var(--ar-secondary);
+  background-color: var(--ar-primary);
+  border-bottom-width: 3px;
+  transition: transform 0.1s ease-in-out;
+}
