--- a/client-myjss/src/app/modules/quotation/components/services-selection/services-selection.component.html
+++ b/client-myjss/src/app/modules/quotation/components/services-selection/services-selection.component.html
@@ -59,7 +59,7 @@
       </p>
     </div>
 
-    <ul ngbNav #nav="ngbNav" [destroyOnHide]="false" [activeId]="activeId" class="nav-tabs ">
+    <ul ngbNav #nav="ngbNav" [destroyOnHide]="false" [activeId]="activeId" class="nav-tabs border-3 border-secondary">
       <ng-container *ngIf="serviceFamilies">
         <ng-container *ngFor="let serviceFamily of serviceFamilies;let serviceFamilyIndex=index">
           <li [ngbNavItem]="serviceFamilyIndex" class="nav-item "
