--- a/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.css
+++ b/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.css
@@ -208,3 +208,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   --ar-dropdown-bg: #fff;
   color: #1c2d41 !important;
 }
+
+.cursor-default {
+  cursor: default;
+}
