--- a/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -7,9 +7,10 @@
     <div class="d-flex justify-content-between align-items-center row pb-3">
       <!-- Nav tabs -->
       <ul class="col-auto nav nav-tabs align-items-center mb-0" role="tablist">
-        <li class="nav-item d-flex align-items-center rounded-4" *ngFor="let item of myJssQuotationItems;">
+        <li class="nav-item d-flex align-items-center rounded-4 cursor-default"
+          *ngFor="let item of myJssQuotationItems;">
           <i class="ai-chevron-right quotation-nav-link me-2 fs-5" *ngIf="item!=myJssQuotationItems[0]"></i>
-          <a class="quotation-nav-link nav-link rounded-1 " [class.active]="item == selectedTab"
+          <a class="quotation-nav-link nav-link rounded-1 cursor-default" [class.active]="item == selectedTab"
             [class.disabled]="!isStepAccessible(item)">
             {{ item.label }}
           </a>
